# trailgen

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  NOTICE  README.md  export.gpx  pyproject.toml
.github/workflows/: ci.yml  release.yml
renderer/: app.js  index.html  styles.css
scripts/: bump_version.py  vendor_maplibre.sh
src/trailgen/: camera_auto.py  camera_follow.py  cli.py  config.py  geo.py  gpx.py  render.py  server.py
src/trailgen/camera/: __init__.py  follow.py
src/trailgen/cli/: main.py
src/trailgen/config/: __init__.py  settings.py
src/trailgen/geo/: __init__.py  core.py  gpx.py
src/trailgen/render/: __init__.py  ffmpeg.py  pipeline.py  server.py
src/trailgen/renderer/: __init__.py  app.js  index.html
src/trailgen/terrain/: __init__.py  sampler.py
