[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trailgen"
version = "0.1.0"
description = "Local 3D trail video generator"
requires-python = ">=3.10"
dependencies = [
  "gpxpy>=1.5.0",
  "playwright>=1.43.0",
  "python-dotenv>=1.0.1"
]

[project.scripts]
trailgen = "trailgen.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
