[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trailgen"
version = "0.3.1"
description = "Local 3D trail video generator"
requires-python = ">=3.10"
dependencies = [
  "gpxpy>=1.5.0",
  "Pillow>=10.0.0",
  "playwright>=1.43.0",
  "rich>=13.7.1",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "black>=24.10.0",
  "flake8>=7.1.0",
  "pre-commit>=3.7.1"
]

[project.scripts]
trailgen = "trailgen.cli.main:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
